# C-Blackjack

./: .gitignore  CMakeLists.txt  README.md
include/: card.h  cards.cpp  deckManager.h  game.h  player.h
src/: card.cpp  deckManager.cpp  game.cpp  main.cpp  player.cpp
